# farm-infra

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix
backend/: README.md  module.nix  package.nix  pyproject.toml
backend/backend/: api.py  models.py  settings.py  tests.py  urls.py
backend/backend/fixtures/: admin.json  todo.json
backend/backend/migrations/: 0001_initial.py
frontend/: .pnp.cjs  README.md  missing-hashes.json  package.json  package.nix
frontend/src/: Api.svelte  App.svelte  Ros.svelte  api.ts  ros.ts
frontend/src/lib/: Ros.svelte  api.ts
nix/: common.nix  elk.nix  farm-infra-kiosk.nix  farm-infra-web.nix  logs.nix  wifi.nix
nix/rpi/: configuration.nix
nix/rpi-vm/: configuration.nix
nix/server/: configuration.nix
rpi/: can.nix  configuration.nix  kiosk.nix  pcan-linux-driver.nix  touchscreen.nix  wifi.nix
server/: configuration.nix  docker.nix  logs.nix  ros.nix  web.nix
